--- a/static/index.html
+++ b/static/index.html
@@ -77,7 +77,7 @@
             font-weight: bold;
             margin-bottom: 20px;
         }
-        .status-load极ing {
+        .status-loading {
             background: rgba(240, 185, 11, 0.2);
             color: var(--binance-yellow);
         }
@@ -115,16 +115,11 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 15px;
-            cursor: pointer;
         }
         .resistance-title {
             font-size: 18px;
             font-weight: bold;
             color: var(--binance-yellow);
-        }
-        .toggle-icon {
-            font-size: 20px;
-            color: #9aa1ab;
         }
         .query-container {
             display: flex;
@@ -145,7 +140,7 @@
             border: none;
             color: #eaecef;
             padding: 10px 20px;
-            border-radius: 6px;
+            border-radius: 6极px;
             cursor: pointer;
             font-weight: bold;
             transition: background 0.2s;
@@ -407,8 +402,8 @@
                 <h1>持仓量分析系统</h1>
                 <div class="time-info">
                     <div>最后更新: {{ lastUpdated || '加载中...' }}</div>
-                    <div>下次分析: {{ nextAnalysisTime || '计算中...' }}</div>
-                </极div>
+                    <div>下次分析: {{ nextAnalysisTime || '计算中...' }}</极div>
+                </div>
             </div>
             <button class="refresh-btn" @click="fetchData" :disabled="loading">
                 <span v-if="!loading">刷新数据</span>
@@ -693,7 +688,7 @@
                                         </div>
                                         <div class="resistance-block">
                                             <div class="block-header">日线</div>
-                                            <div class="resistance-value">{{ getLevel(coin.symbol, '1d', 'resistance', 0).toFixed(4) }}</div>
+                                            <div class="resistance-value">{{ getLevel(coin.symbol, '1d', 'resistance', 0).to极Fixed(4) }}</div>
                                             <div class="support-value">{{ getLevel(coin.symbol, '1d', 'support', 0).toFixed(4) }}</div>
                                         </div>
                                     </div>
